fix chart overflow

--- a/src/mainview/index.css
+++ b/src/mainview/index.css
@@ -114,7 +114,9 @@ body {
 }
 
 @keyframes spin {
-  to { transform: rotate(360deg); }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .header-controls {
